# first_project_with_django

./: .env.example  .gitignore  private.py  pyproject.toml  requirements  requirements.txt  sercicies.py  servicies.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_text_area.py  0003_alter_blogpost_actual_version_indicator_and_more.py  0004_alter_blogpost_created_at.py
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_category_product.py  0003_product_manufactured_at.py  0004_remove_product_category_and_more.py  0005_remove_product_manufactured_at_product_category.py  0006_alter_product_image_preview.py  0007_remove_product_category_alter_product_created_at_and_more.py  0008_product_category.py  0009_alter_product_category.py  0010_remove_product_category.py  0011_contactsdata.py  0012_contactsdata_slug_product_slug.py  0013_versionproduct.py  0014_rename_is_active_versionproduct_is_active_version_and_more.py  0015_product_owner.py  0016_alter_product_options.py  0017_alter_product_options_product_is_active.py
catalog/templatetags/: categories_tag.py  menu_items.py
config/: settings.py  urls.py
data_for_db/: catalog_data.json  category_data.json  posts.json  product_data.json
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_options_users_token.py  0003_alter_users_token.py
users/templates/: login.html  password_reset.html
(+24 files in other folders)
