[tool.poetry]
name = "first-project-with-django"
version = "0.1.0"
description = ""
authors = ["Kristina Arkadievna <108188624+LeeGeller@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
